hc - fixed bugs

--- a/CNN/torchText.ipynb
+++ b/CNN/torchText.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.7/site-packages/torchtext/data/field.py:150: UserWarning: Field class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
-      "  warnings.warn('{} class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.'.format(self.__class__.__name__), UserWarning)\n",
-      "/opt/anaconda3/lib/python3.7/site-packages/torchtext/data/field.py:150: UserWarning: LabelField class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
-      "  warnings.warn('{} class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.'.format(self.__class__.__name__), UserWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# New Stuff\n",
     "from torchtext.data import Field, TabularDataset, BucketIterator, LabelField\n",
@@ -41,28 +30,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.7/site-packages/torchtext/data/example.py:68: UserWarning: Example class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
-      "  warnings.warn('Example class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.', UserWarning)\n",
-      "/opt/anaconda3/lib/python3.7/site-packages/torchtext/data/example.py:52: UserWarning: Example class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
-      "  warnings.warn('Example class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.', UserWarning)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Num of training:  6335\n",
-      "Num of testing:  6335\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_data, test_data = TabularDataset.splits(\n",
     "    path='../data',\n",
@@ -76,40 +46,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Num of training:  4751\n",
-      "Num of validation:  1584\n",
-      "Num of testing:  6335\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "train_data, validation_data = train_data.split(split_ratio=0.75)\n",
+    "train_data, valid_data = train_data.split(split_ratio=0.75)\n",
     "print(\"Num of training: \", len(train_data))\n",
-    "print(\"Num of validation: \", len(validation_data))\n",
+    "print(\"Num of validation: \", len(valid_data))\n",
     "print(\"Num of testing: \", len(test_data))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dict_keys(['text', 'label'])\n",
-      "dict_values([['On', 'this', 'day', 'in', '1973', ',', 'J.', 'Fred', 'Buzhardt', ',', 'a', 'lawyer', 'defending', 'President', 'Richard', 'Nixon', 'in', 'the', 'Watergate', 'case', ',', 'revealed', 'that', 'a', 'key', 'White', 'House', 'tape', 'had', 'an', '18', '...'], 'REAL'])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(train_data[0].__dict__.keys())\n",
     "print(train_data[0].__dict__.values())"
@@ -117,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,21 +85,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Unique tokens in TEXT vocabulary: 25002\n",
-      "Unique tokens in LABEL vocabulary: 2\n",
-      "[('the', 197500), (',', 193711), ('.', 163403), ('to', 104686), ('of', 97640), ('and', 85835), ('a', 78621), ('in', 68865), ('that', 52056), ('\\n\\n', 43799), ('is', 41265), ('for', 33590), ('-', 32910), ('\"', 30197), ('on', 29393), ('\\n', 29115), ('’s', 26852), ('“', 26056), ('”', 25522), ('The', 22992)]\n",
-      "['<unk>', '<pad>', 'the', ',', '.', 'to', 'of', 'and', 'a', 'in']\n",
-      "defaultdict(None, {'FAKE': 0, 'REAL': 1})\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f\"Unique tokens in TEXT vocabulary: {len(TEXT.vocab)}\")\n",
     "print(f\"Unique tokens in LABEL vocabulary: {len(LABEL.vocab)}\")\n",
@@ -159,34 +98,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.7/site-packages/torchtext/data/iterator.py:48: UserWarning: BucketIterator class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
-      "  warnings.warn('{} class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.'.format(self.__class__.__name__), UserWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "BATCH_SIZE = 64\n",
     "\n",
     "# device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "device = 'cpu'\n",
     "\n",
-    "train_iterator, validation_iterator, test_iterator = BucketIterator.splits(\n",
-    "    (train_data, validation_data, test_data),\n",
-    "    batch_size=BATCH_SIZE,\n",
-    "    sort=False,\n",
-    "    device=device)"
+    "train_iterator, valid_iterator, test_iterator = BucketIterator.splits(\n",
+    "    (train_data, valid_data, test_data), \n",
+    "    batch_size = BATCH_SIZE, \n",
+    "    device = device)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,26 +186,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[-0.1117, -0.4966,  0.1631,  ...,  1.2647, -0.2753, -0.1325],\n",
-       "        [-0.8555, -0.7208,  1.3755,  ...,  0.0825, -1.1314,  0.3997],\n",
-       "        [-0.0382, -0.2449,  0.7281,  ..., -0.1459,  0.8278,  0.2706],\n",
-       "        ...,\n",
-       "        [-0.9607, -0.8424, -0.6504,  ..., -0.1872,  0.5187,  0.4356],\n",
-       "        [-0.9251, -1.0460, -0.0645,  ..., -1.1777, -1.1574,  0.3817],\n",
-       "        [ 1.7894, -0.5497, -0.6156,  ...,  1.0804, -0.4228, -0.0716]])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pretrained_embeddings = TEXT.vocab.vectors\n",
     "model.embedding.weight.data.copy_(pretrained_embeddings)"
@@ -284,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -330,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -392,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,16 +321,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/lib/python3.7/site-packages/torchtext/data/batch.py:23: UserWarning: Batch class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
-      "  warnings.warn('{} class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.'.format(self.__class__.__name__), UserWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "N_EPOCHS = 5\n",
     "\n",
