--- a/CNN/torchText.ipynb
+++ b/CNN/torchText.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.7/site-packages/torchtext/data/field.py:150: UserWarning: Field class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
+      "  warnings.warn('{} class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.'.format(self.__class__.__name__), UserWarning)\n",
+      "/opt/anaconda3/lib/python3.7/site-packages/torchtext/data/field.py:150: UserWarning: LabelField class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
+      "  warnings.warn('{} class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.'.format(self.__class__.__name__), UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "# New Stuff\n",
     "from torchtext.data import Field, TabularDataset, BucketIterator, LabelField\n",
@@ -22,17 +33,36 @@
     "torch.backends.cudnn.deterministic = True\n",
     "\n",
     "# We are loading our text data into a text field, ignore title for now\n",
-    "TEXT = Field(tokenize = 'spacy', batch_first = True)\n",
-    "LABEL = LabelField(dtype = torch.float)\n",
+    "TEXT = Field(batch_first = True, sequential=True, use_vocab=True, tokenize='spacy', lower=True)\n",
+    "LABEL = LabelField(dtype = torch.float, sequential=True, use_vocab=True, tokenize='spacy', lower=True)\n",
     "\n",
     "fields = {'text': ('text', TEXT), 'label': ('label', LABEL)}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.7/site-packages/torchtext/data/example.py:68: UserWarning: Example class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
+      "  warnings.warn('Example class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.', UserWarning)\n",
+      "/opt/anaconda3/lib/python3.7/site-packages/torchtext/data/example.py:52: UserWarning: Example class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
+      "  warnings.warn('Example class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.', UserWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Num of training:  6335\n",
+      "Num of testing:  6335\n"
+     ]
+    }
+   ],
    "source": [
     "train_data, test_data = TabularDataset.splits(\n",
     "    path='../data',\n",
@@ -46,9 +76,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Num of training:  4751\n",
+      "Num of validation:  1584\n",
+      "Num of testing:  6335\n"
+     ]
+    }
+   ],
    "source": [
     "train_data, valid_data = train_data.split(split_ratio=0.75)\n",
     "print(\"Num of training: \", len(train_data))\n",
@@ -58,9 +98,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['text', 'label'])\n",
+      "dict_values([['on', 'this', 'day', 'in', '1973', ',', 'j.', 'fred', 'buzhardt', ',', 'a', 'lawyer', 'defending', 'president', 'richard', 'nixon', 'in', 'the', 'watergate', 'case', ',', 'revealed', 'that', 'a', 'key', 'white', 'house', 'tape', 'had', 'an', '18', '...'], 'real'])\n"
+     ]
+    }
+   ],
    "source": [
     "print(train_data[0].__dict__.keys())\n",
     "print(train_data[0].__dict__.values())"
@@ -68,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,9 +134,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unique tokens in TEXT vocabulary: 25002\n",
+      "Unique tokens in LABEL vocabulary: 2\n",
+      "[('the', 220806), (',', 193711), ('.', 163403), ('to', 106045), ('of', 98354), ('and', 90919), ('a', 81926), ('in', 75274), ('that', 55067), ('\\n\\n', 43799), ('is', 41983), ('for', 35367), ('-', 32910), ('on', 31077), ('\"', 30197), ('it', 30057), ('\\n', 29115), ('’s', 26896), ('“', 26056), ('”', 25522)]\n",
+      "['<unk>', '<pad>', 'the', ',', '.', 'to', 'of', 'and', 'a', 'in']\n",
+      "defaultdict(None, {'fake': 0, 'real': 1})\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"Unique tokens in TEXT vocabulary: {len(TEXT.vocab)}\")\n",
     "print(f\"Unique tokens in LABEL vocabulary: {len(LABEL.vocab)}\")\n",
@@ -98,9 +159,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.7/site-packages/torchtext/data/iterator.py:48: UserWarning: BucketIterator class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
+      "  warnings.warn('{} class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.'.format(self.__class__.__name__), UserWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "BATCH_SIZE = 64\n",
     "\n",
@@ -110,12 +180,12 @@
     "train_iterator, valid_iterator, test_iterator = BucketIterator.splits(\n",
     "    (train_data, valid_data, test_data), \n",
     "    batch_size = BATCH_SIZE, \n",
-    "    device = device)\n"
+    "    device = device, sort = False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,9 +256,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.1117, -0.4966,  0.1631,  ...,  1.2647, -0.2753, -0.1325],\n",
+       "        [-0.8555, -0.7208,  1.3755,  ...,  0.0825, -1.1314,  0.3997],\n",
+       "        [-0.0382, -0.2449,  0.7281,  ..., -0.1459,  0.8278,  0.2706],\n",
+       "        ...,\n",
+       "        [-0.2111,  0.0242,  0.3948,  ..., -0.9228,  0.3897,  0.0144],\n",
+       "        [ 0.4726, -0.1936,  0.5946,  ..., -0.2373,  0.8675,  0.4416],\n",
+       "        [-0.3018, -0.3586,  0.0533,  ..., -0.2412, -0.6657, -0.0248]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pretrained_embeddings = TEXT.vocab.vectors\n",
     "model.embedding.weight.data.copy_(pretrained_embeddings)"
@@ -196,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,9 +406,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/lib/python3.7/site-packages/torchtext/data/batch.py:23: UserWarning: Batch class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.\n",
+      "  warnings.warn('{} class will be retired soon and moved to torchtext.legacy. Please see the most recent release notes for further information.'.format(self.__class__.__name__), UserWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 01 | Epoch Time: 15m 21s\n",
+      "\tTrain Loss: 0.133 | Train Acc: 95.41%\n",
+      "\t Val. Loss: 0.050 |  Val. Acc: 97.83%\n",
+      "Epoch: 02 | Epoch Time: 18m 58s\n",
+      "\tTrain Loss: 0.034 | Train Acc: 99.10%\n",
+      "\t Val. Loss: 0.031 |  Val. Acc: 99.00%\n",
+      "Epoch: 03 | Epoch Time: 19m 30s\n",
+      "\tTrain Loss: 0.020 | Train Acc: 99.60%\n",
+      "\t Val. Loss: 0.023 |  Val. Acc: 99.12%\n",
+      "Epoch: 04 | Epoch Time: 16m 41s\n",
+      "\tTrain Loss: 0.015 | Train Acc: 99.62%\n",
+      "\t Val. Loss: 0.020 |  Val. Acc: 99.12%\n",
+      "Epoch: 05 | Epoch Time: 17m 4s\n",
+      "\tTrain Loss: 0.009 | Train Acc: 99.79%\n",
+      "\t Val. Loss: 0.015 |  Val. Acc: 99.38%\n"
+     ]
+    }
+   ],
    "source": [
     "N_EPOCHS = 5\n",
     "\n",
@@ -345,6 +462,19 @@
     "    print(f'Epoch: {epoch+1:02} | Epoch Time: {epoch_mins}m {epoch_secs}s')\n",
     "    print(f'\\tTrain Loss: {train_loss:.3f} | Train Acc: {train_acc*100:.2f}%')\n",
     "    print(f'\\t Val. Loss: {valid_loss:.3f} |  Val. Acc: {valid_acc*100:.2f}%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.load_state_dict(torch.load('tut4-model.pt'))\n",
+    "\n",
+    "test_loss, test_acc = evaluate(model, test_iterator, criterion)\n",
+    "\n",
+    "print(f'Test Loss: {test_loss:.3f} | Test Acc: {test_acc*100:.2f}%')"
    ]
   },
   {
