--- a/CNN/torchText.ipynb
+++ b/CNN/torchText.ipynb
@@ -32,9 +32,11 @@
     "torch.manual_seed(SEED)\n",
     "torch.backends.cudnn.deterministic = True\n",
     "\n",
-    "# We are loading our text data into a text field, ignore title for now\n",
-    "TEXT = Field(batch_first = True, sequential=True, use_vocab=True, tokenize='spacy', lower=True)\n",
-    "LABEL = LabelField(dtype = torch.float, sequential=True, use_vocab=True, tokenize='spacy', lower=True)\n",
+    "# We are loading our text data into a text field, ignore title for now. Batch_first makes tensors with the batch\n",
+    "# dimension first. You don't have to set lower = True (it is default false), You could set use_vocab = True (by\n",
+    "# default anyways). Same with sequential.\n",
+    "TEXT = Field(batch_first = True, tokenize='spacy', lower=True)\n",
+    "LABEL = LabelField(dtype = torch.float, tokenize='spacy', lower=True)\n",
     "\n",
     "fields = {'text': ('text', TEXT), 'label': ('label', LABEL)}"
    ]
@@ -466,9 +468,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Loss: 0.007 | Test Acc: 99.83%\n"
+     ]
+    }
+   ],
    "source": [
     "model.load_state_dict(torch.load('tut4-model.pt'))\n",
     "\n",
