adding explanation for CNN code

--- a/CNN/torchText.ipynb
+++ b/CNN/torchText.ipynb
@@ -33,11 +33,15 @@
     "torch.backends.cudnn.deterministic = True\n",
     "\n",
     "# We are loading our text data into a text field, ignore title for now. Batch_first makes tensors with the batch\n",
-    "# dimension first. You don't have to set lower = True (it is default false), You could set use_vocab = True (by\n",
-    "# default anyways). Same with sequential.\n",
+    "# dimension first. You don't have to set lower = True (it is default false), You could set use_vocab = True (but true\n",
+    "# default anyways). Same with sequential. See here: https://pytorch.org/text/_modules/torchtext/data/field.html.\n",
+    "# Tokenization is simply how we choose to tokenize the text data or split it into distinct smaller units.\n",
     "TEXT = Field(batch_first = True, tokenize='spacy', lower=True)\n",
     "LABEL = LabelField(dtype = torch.float, tokenize='spacy', lower=True)\n",
     "\n",
+    "#We are just definining the batch attribute name here: TEXT and LABEL when reading in our JSON data. All that happens\n",
+    "#is that TEXT becomes the batch attribute that gives us text data. When so when we define our iterator we can acesss\n",
+    "#the text data using batch.TEXT\n",
     "fields = {'text': ('text', TEXT), 'label': ('label', LABEL)}"
    ]
   },
@@ -346,11 +350,11 @@
     "        \n",
     "        optimizer.zero_grad()\n",
     "        \n",
-    "        predictions = model(batch.text).squeeze(1)\n",
+    "        predictions = model(batch.TEXT).squeeze(1)\n",
     "        \n",
-    "        loss = criterion(predictions, batch.label)\n",
+    "        loss = criterion(predictions, batch.LABEL)\n",
     "        \n",
-    "        acc = binary_accuracy(predictions, batch.label)\n",
+    "        acc = binary_accuracy(predictions, batch.LABEL)\n",
     "        \n",
     "        loss.backward()\n",
     "        \n",
@@ -379,11 +383,11 @@
     "    \n",
     "        for batch in iterator:\n",
     "\n",
-    "            predictions = model(batch.text).squeeze(1)\n",
+    "            predictions = model(batch.TEXT).squeeze(1)\n",
     "            \n",
-    "            loss = criterion(predictions, batch.label)\n",
+    "            loss = criterion(predictions, batch.LABEL)\n",
     "            \n",
-    "            acc = binary_accuracy(predictions, batch.label)\n",
+    "            acc = binary_accuracy(predictions, batch.LABEL)\n",
     "\n",
     "            epoch_loss += loss.item()\n",
     "            epoch_acc += acc.item()\n",
