adding explanation for CNN code

--- a/CNN/torchText.ipynb
+++ b/CNN/torchText.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -32,23 +32,29 @@
     "torch.manual_seed(SEED)\n",
     "torch.backends.cudnn.deterministic = True\n",
     "\n",
-    "# We are loading our text data into a text field, ignore title for now. Batch_first makes tensors with the batch\n",
+    "# We are loading our text data into a text field, ignore title for now. batch_first makes tensors with the batch\n",
     "# dimension first. You don't have to set lower = True (it is default false), You could set use_vocab = True (but true\n",
     "# default anyways). Same with sequential. See here: https://pytorch.org/text/_modules/torchtext/data/field.html.\n",
     "# Tokenization is simply how we choose to tokenize the text data or split it into distinct smaller units.\n",
     "TEXT = Field(batch_first = True, tokenize='spacy', lower=True)\n",
+    "\n",
+    "#Basically here the dtype = torch.float rather than torch.long which is the default because \n",
+    "#torch.float allows us to create the loss function later which only accepts float tensors.\n",
     "LABEL = LabelField(dtype = torch.float, tokenize='spacy', lower=True)\n",
     "\n",
     "#We are just definining the batch attribute name here: TEXT and LABEL when reading in our JSON data. All that happens\n",
     "#is that TEXT becomes the batch attribute that gives us text data. When so when we define our iterator we can acesss\n",
-    "#the text data using batch.TEXT\n",
+    "#the text data using batch.TEXT. Same thing when we build our vocab. Note the below is a python dictionary with the\n",
+    "#tuple representing the attribute we will use for our bathces. The key should match the JSON data.\n",
     "fields = {'text': ('text', TEXT), 'label': ('label', LABEL)}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -70,6 +76,12 @@
     }
    ],
    "source": [
+    "#Our train_data is basically just a big array of dictionaries. Each dictionary has keys, in our case\n",
+    "#just text : \"text goes here\" and for test_data its just label: \"fake/real\". So \"label\" is our key, and \"text\" is a\n",
+    "#a key. However train_data (which is some sort of Dataset object) has __dict__ as an attribute. I'm not exactly sure what the type of train_data is.\n",
+    "#I'm guessing its just a TabularDataset. Actually TabularDataset extends DataSet.\n",
+    "#Oh a TabularDataset is just a normal DataSet but the columns are stored in CSV, TSV, or JSON format.\n",
+    "#This has all the documentation for TabularDataset and BucketIterator that I can find: https://torchtext.readthedocs.io/en/latest/data.html.\n",
     "train_data, test_data = TabularDataset.splits(\n",
     "    path='../data',\n",
     "    train='news.csv',\n",
@@ -78,6 +90,26 @@
     "    fields=fields)\n",
     "print(\"Num of training: \", len(train_data))\n",
     "print(\"Num of testing: \", len(test_data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torchtext.data.dataset.TabularDataset"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(train_data)"
    ]
   },
   {
@@ -96,6 +128,7 @@
     }
    ],
    "source": [
+    "\n",
     "train_data, valid_data = train_data.split(split_ratio=0.75)\n",
     "print(\"Num of training: \", len(train_data))\n",
     "print(\"Num of validation: \", len(valid_data))\n",
