adding explanation for CNN code

--- a/CNN/torchText.ipynb
+++ b/CNN/torchText.ipynb
@@ -82,6 +82,7 @@
     "#I'm guessing its just a TabularDataset. Actually TabularDataset extends DataSet.\n",
     "#Oh a TabularDataset is just a normal DataSet but the columns are stored in CSV, TSV, or JSON format.\n",
     "#This has all the documentation for TabularDataset and BucketIterator that I can find: https://torchtext.readthedocs.io/en/latest/data.html.\n",
+    "#There is also this: the actual github docs: https://github.com/pytorch/text/blob/master/torchtext/data/dataset.py\n",
     "train_data, test_data = TabularDataset.splits(\n",
     "    path='../data',\n",
     "    train='news.csv',\n",
