Added code for user input

--- a/RNN/torchText2.ipynb
+++ b/RNN/torchText2.ipynb
@@ -1630,7 +1630,22 @@
     "    model.eval()\n",
     "    tokenized = [tok.text for tok in nlp.tokenizer(text)]\n",
     "    indexed = [text.vocab.stoi[t] for t in tokenized]\n",
-    "    "
+    "    length = [len(indexed)]\n",
+    "    tensor = torch.LongTensor(indexed.to(device))\n",
+    "    tensor = tensor.unsqueeze(1)\n",
+    "    length_tensor = torch.LongTensor(length)\n",
+    "    prediction = torch.sigmoid(model.forward(tensor, length_tensor))\n",
+    "    return prediction.item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_inputted_text = input(\"Copy Paste the Text of an Article and we will predict if it is fake or real:\")\n",
+    "predict_sentiment(model, user_inputted_text)"
    ]
   }
  ]
